crates/kybern-protocol/tests/snapshots/schema_snapshot__settings_schema_is_stable.snap
---
source: crates/kybern-protocol/tests/schema_snapshot.rs
expression: schema_for!(Settings)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "Settings",
  "description": "User settings persisted at `<data_dir>/settings.json`.",
  "type": "object",
  "properties": {
    "default_provider": {
      "$ref": "#/$defs/ProviderKind",
      "default": "claude-code"
    },
    "default_permission_mode": {
      "$ref": "#/$defs/PermissionMode",
      "default": "supervised"
    },
    "worktrees_default": {
      "description": "Global default for new threads; projects can override.",
      "type": "boolean",
      "default": false
    },
    "automatic_worktree_cleanup": {
      "description": "Remove clean, merged, inactive managed worktrees when their thread is archived.",
      "type": "boolean",
      "default": false
    },
    "generate_titles": {
      "description": "Generate thread titles with a model after the first turn.",
      "type": "boolean",
      "default": true
    },
    "title_provider": {
      "description": "Provider used for titles; falls back to the thread's own provider.",
      "anyOf": [
        {
          "$ref": "#/$defs/ProviderKind"
        },
        {
          "type": "null"
        }
      ]
    },
    "providers": {
      "type": "object",
      "properties": {
        "claude-code": {
          "$ref": "#/$defs/ProviderSettings"
        },
        "codex": {
          "$ref": "#/$defs/ProviderSettings"
        },
        "cursor": {
          "$ref": "#/$defs/ProviderSettings"
        },
        "omp": {
          "$ref": "#/$defs/ProviderSettings"
        },
        "opencode": {
          "$ref": "#/$defs/ProviderSettings"
        },
        "pi": {
          "$ref": "#/$defs/ProviderSettings"
        }
      },
      "additionalProperties": false,
      "default": {}
    },
    "notifications": {
      "description": "Show OS notifications when a turn ends or needs approval.",
      "type": "boolean",
      "default": true
    },
    "auto_update_harnesses": {
      "description": "Check installed harnesses daily and update them when idle. Opt-in per environment.",
      "type": "boolean",
      "default": false
    },
    "auto_update_daemon": {
      "description": "Check the release feed daily and replace this daemon when idle. Opt-in\nper environment; ignored for a daemon the desktop app manages.",
      "type": "boolean",
      "default": false
    },
    "background": {
      "description": "How the daemon trims CPU and memory while nothing needs it.",
      "$ref": "#/$defs/BackgroundSettings",
      "default": {
        "session_idle_minutes": 10,
        "max_idle_sessions": 4,
        "terminal_idle_minutes": 60,
        "daemon_idle_exit_minutes": 0,
        "save_power_on_battery": false
      }
    },
    "access": {
      "description": "Which networks other devices can reach this daemon on.",
      "$ref": "#/$defs/AccessSettings",
      "default": {
        "tailscale": false
      }
    },
    "computer_use": {
      "description": "Desktop control through CuaDriver for non-Codex harnesses.",
      "$ref": "#/$defs/ComputerUseSettings",
      "default": {
        "enabled": false,
        "foreground": "ask",
        "show_cursor": false
      }
    },
    "orchestration": {
      "description": "Limits on agents delegating work to other agents.",
      "$ref": "#/$defs/OrchestrationSettings",
      "default": {
        "max_active_children": 4,
        "max_depth": 2
      }
    },
    "tell_agents_about_kybern": {
      "description": "Give new agent sessions a short guide to Kybern: images, notes and\ntasks, other threads, helpers. Applies to sessions started after the change.",
      "type": "boolean",
      "default": true
    }
  },
  "$defs": {
    "ProviderKind": {
      "description": "Coding agent backends the daemon can drive. Each has its own native driver.",
      "type": "string",
      "enum": [
        "claude-code",
        "codex",
        "opencode",
        "pi",
        "omp",
        "cursor"
      ]
    },
    "PermissionMode": {
      "description": "The four permission modes.",
      "oneOf": [
        {
          "description": "Every tool call that mutates or executes asks for approval.",
          "type": "string",
          "const": "supervised"
        },
        {
          "description": "File edits proceed; shell and network still ask.",
          "type": "string",
          "const": "accept-edits"
        },
        {
          "description": "The provider decides with its own safety heuristics; asks only when unsure.",
          "type": "string",
          "const": "auto"
        },
        {
          "description": "Nothing asks. Sandboxing is the provider's problem.",
          "type": "string",
          "const": "full-access"
        }
      ]
    },
    "ProviderSettings": {
      "description": "Per-provider configuration in settings.json.",
      "type": "object",
      "properties": {
        "accounts": {
          "type": "object",
          "additionalProperties": {
            "$ref": "#/$defs/ProviderAccount"
          }
        },
        "default_account": {
          "type": [
            "string",
            "null"
          ]
        },
        "project_accounts": {
          "description": "Account overrides keyed by the registered project path.",
          "type": "object",
          "additionalProperties": {
            "type": "string"
          }
        },
        "binary": {
          "description": "Absolute path to the executable; omit to look it up on PATH.",
          "type": [
            "string",
            "null"
          ]
        },
        "model": {
          "description": "Default model for new threads.",
          "type": [
            "string",
            "null"
          ]
        },
        "env": {
          "description": "Extra environment variables for the provider process.",
          "type": "object",
          "additionalProperties": {
            "type": "string"
          }
        },
        "project_profiles": {
          "description": "OMP profiles keyed by the registered project's absolute path. Worktrees\ninherit their project's profile; an empty value selects OMP's default.",
          "type": "object",
          "additionalProperties": {
            "type": "string"
          }
        }
      }
    },
    "ProviderAccount": {
      "description": "A named, native-isolated account. Secrets remain in the harness directory.",
      "type": "object",
      "properties": {
        "name": {
          "type": "string"
        },
        "directory": {
          "type": "string"
        },
        "color": {
          "description": "Palette key: blue | green | purple | pink | teal | amber. Unknown keys render without a dot.",
          "type": [
            "string",
            "null"
          ]
        },
        "email": {
          "description": "Last identity seen by the daemon, for instant rendering. Never a credential.",
          "type": [
            "string",
            "null"
          ]
        },
        "plan": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "name",
        "directory"
      ]
    },
    "BackgroundSettings": {
      "description": "Limits on what the daemon keeps alive after work finishes. Agent processes\nare resumed from the provider's own session on the next message, so\nreleasing one loses no conversation. Every value is in minutes; `0` turns\nthat limit off.",
      "type": "object",
      "properties": {
        "session_idle_minutes": {
          "description": "Minutes an idle thread keeps its agent process before the daemon\nreleases it. Threads that are running, awaiting approval, or have\nbackground work are never released.",
          "type": "integer",
          "format": "uint32",
          "minimum": 0,
          "default": 10
        },
        "max_idle_sessions": {
          "description": "Most idle agent processes kept warm at once. The least recently used\nare released first, even before their idle time is up.",
          "type": "integer",
          "format": "uint32",
          "minimum": 0,
          "default": 4
        },
        "terminal_idle_minutes": {
          "description": "Minutes a shell with no attached client and no foreground job stays\nopen before the daemon closes it.",
          "type": "integer",
          "format": "uint32",
          "minimum": 0,
          "default": 60
        },
        "daemon_idle_exit_minutes": {
          "description": "Minutes with no clients, agents, terminals, or queued work before the\ndaemon exits. Only for daemons the desktop app starts on demand: the\nCLI and remote clients do not restart a daemon that has exited.",
          "type": "integer",
          "format": "uint32",
          "minimum": 0,
          "default": 0
        },
        "save_power_on_battery": {
          "description": "While the host runs on battery, release idle agent processes after\n`BATTERY_SESSION_IDLE` instead of `session_idle_minutes` and hold\nautomatic harness updates until power returns.",
          "type": "boolean",
          "default": false
        }
      }
    },
    "AccessSettings": {
      "description": "Extra listeners the daemon opens besides its loopback port. Persisted so\na restart keeps the daemon reachable for paired phones.",
      "type": "object",
      "properties": {
        "tailscale": {
          "description": "Also listen on this machine's Tailscale address, so devices on the\nsame tailnet can pair and connect directly.",
          "type": "boolean",
          "default": false
        }
      }
    },
    "ComputerUseSettings": {
      "description": "Agents drive apps on this Mac through a separately installed CuaDriver.\nCodex keeps OpenAI's own computer-use plugin.",
      "type": "object",
      "properties": {
        "enabled": {
          "description": "Offer the computer tools to new agent sessions.",
          "type": "boolean",
          "default": false
        },
        "foreground": {
          "description": "Whether an agent may ask to use the real cursor and focus.",
          "$ref": "#/$defs/ComputerForeground",
          "default": "ask"
        },
        "show_cursor": {
          "description": "Draw CuaDriver's agent cursor where agents act. Off by default: the\ncursor overlay in CuaDriver 0.28 can hold over a gigabyte of\nscreen-sized frames.",
          "type": "boolean",
          "default": false
        },
        "always_allowed_apps": {
          "description": "Apps (display names) agents may control in the background without\nasking. Filled by \"Always allow\" on the approval card.",
          "type": "array",
          "items": {
            "type": "string"
          }
        }
      }
    },
    "ComputerForeground": {
      "oneOf": [
        {
          "description": "Background by default; foreground after the user approves it per app.",
          "type": "string",
          "const": "ask"
        },
        {
          "description": "Background only.",
          "type": "string",
          "const": "never"
        }
      ]
    },
    "OrchestrationSettings": {
      "description": "Limits for `kybern_agent_delegate`. Read each time an agent delegates.",
      "type": "object",
      "properties": {
        "max_active_children": {
          "description": "Most delegated children one thread may have running at once (1..=16).",
          "type": "integer",
          "format": "uint32",
          "minimum": 0,
          "default": 4
        },
        "max_depth": {
          "description": "Deepest chain of delegation: 1 means only top-level threads delegate (1..=4).",
          "type": "integer",
          "format": "uint32",
          "minimum": 0,
          "default": 2
        }
      }
    }
  }
}
